# candidate-management-platform

./: README.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/backend/: settings.py  urls.py
backend/candidate_management/candidate_management/: settings.py  urls.py
backend/candidates/: models.py  serializers.py  tests.py  urls.py  views.py
backend/candidates/migrations/: 0001_initial.py  0002_alter_job_salary.py
frontend/candidate-management-frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: CandidateDetail.js  CandidateList.js  Dashboard.js  Login.js  LogoutButton.js
frontend/src/services/: api.js  auth.js
